2020-12-30  Stuart Caie <kyzer@cabextract.org.uk>

	* cabd_read_string(): libmspack no longer rejects CAB files with
	empty previnfo/nextinfo strings. Thanks to Simon Tatham for the
	patch, and for noting that WiX v4 currently generates such files.

2020-08-10  Stuart Caie <kyzer@cabextract.org.uk>

	* lzxd_decompress(): merged the code for decoding aligned and
	verbatim blocks, also verified there is no significant performance
	penalty.

2020-08-07  Stuart Caie <kyzer@cabextract.org.uk>

	* read_sys_file(): in a CHM file, the ControlData and ResetTable
	files are loaded entirely into memory, regardless of file size.
	This is not in the spirit of letting users control memory usage.

	ControlData previously had to be at least 28 bytes (in case a new,
	larger version of the file ever appeared), but is now rejected
	if not exactly 28 bytes.

	ResetTable can theoretically be huge; the longest LZX stream of
	16 exabytes could have a 4 petabyte ResetTable. Practically, the
	largest seen in the wild is 46 kilobytes (PHP manuals). I picked
	an arbitrary upper limit of 1MB; please get in contact if you
	know of any CHM files in the wild that are largest than this.

	Thanks to seviezhou on Github for reporting this.

2020-04-13  Stuart Caie <kyzer@cabextract.org.uk>

	* system.h: clear up libmspack's large file support.

	To support large files, do this:

	1. add any defines that your compiler needs to enable large file
	support. It may be supported by default.
	2. Define HAVE_FSEEKO if fseeko() and ftello() are available.
	3. Define SIZEOF_OFF_T to the value of sizeof(off_t); it must be a
	literal value because sizeof() can't be used in preprocessor tests.

	libmspack uses the off_t datatype for all file offsets. If off_t is
	less than 64 bits, libmspack will return an error when processing
	CHM files with offsets beyond 2GB, and won't search for CAB headers
	beyond 2GB into a file.  In both cases, it prints a warning message
	that the library doesn't support large files.
